@@ -71,7 +71,7 @@ end_include
 
 begin_enum
 enum|enum
-DECL|enum|__anon2b7a062a0103
+DECL|enum|__anon27709edd0103
 block|{
 DECL|enumerator|PROP_0
 name|PROP_0
@@ -905,9 +905,10 @@ argument_list|)
 expr_stmt|;
 name|gdk_window_set_user_data
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|widget
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|widget
 argument_list|)
@@ -933,9 +934,10 @@ name|widget
 operator|->
 name|style
 argument_list|,
+name|gtk_widget_get_window
+argument_list|(
 name|widget
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|GTK_STATE_NORMAL
 argument_list|)
@@ -949,9 +951,10 @@ index|]
 operator|=
 name|gdk_bitmap_create_from_data
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|widget
-operator|->
-name|window
+argument_list|)
 argument_list|,
 operator|(
 specifier|const
@@ -1149,9 +1152,10 @@ argument_list|)
 condition|)
 name|gdk_window_move_resize
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|widget
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|allocation
 operator|->
@@ -1554,12 +1558,13 @@ name|gc
 operator|=
 name|gdk_gc_new_with_values
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|GTK_WIDGET
 argument_list|(
 name|canvas
 argument_list|)
-operator|->
-name|window
+argument_list|)
 argument_list|,
 operator|&
 name|values
@@ -2063,6 +2068,10 @@ name|GtkWidget
 modifier|*
 name|widget
 decl_stmt|;
+name|GdkWindow
+modifier|*
+name|window
+decl_stmt|;
 name|g_return_if_fail
 argument_list|(
 name|GIMP_IS_CANVAS
@@ -2078,10 +2087,15 @@ argument_list|(
 name|canvas
 argument_list|)
 expr_stmt|;
-name|gdk_window_scroll
+name|window
+operator|=
+name|gtk_widget_get_window
 argument_list|(
 name|widget
-operator|->
+argument_list|)
+expr_stmt|;
+name|gdk_window_scroll
+argument_list|(
 name|window
 argument_list|,
 name|offset_x
@@ -2092,8 +2106,6 @@ expr_stmt|;
 comment|/*  Make sure expose events are processed before scrolling again  */
 name|gdk_window_process_updates
 argument_list|(
-name|widget
-operator|->
 name|window
 argument_list|,
 name|FALSE
@@ -2131,6 +2143,15 @@ argument_list|(
 name|canvas
 argument_list|)
 decl_stmt|;
+name|GdkWindow
+modifier|*
+name|window
+init|=
+name|gtk_widget_get_window
+argument_list|(
+name|widget
+argument_list|)
+decl_stmt|;
 if|if
 condition|(
 operator|!
@@ -2153,8 +2174,6 @@ condition|)
 return|return;
 name|gdk_draw_line
 argument_list|(
-name|widget
-operator|->
 name|window
 argument_list|,
 name|canvas
@@ -2183,8 +2202,6 @@ argument_list|)
 expr_stmt|;
 name|gdk_draw_line
 argument_list|(
-name|widget
-operator|->
 name|window
 argument_list|,
 name|canvas
@@ -2209,8 +2226,6 @@ argument_list|)
 expr_stmt|;
 name|gdk_draw_line
 argument_list|(
-name|widget
-operator|->
 name|window
 argument_list|,
 name|canvas
@@ -2239,8 +2254,6 @@ argument_list|)
 expr_stmt|;
 name|gdk_draw_line
 argument_list|(
-name|widget
-operator|->
 name|window
 argument_list|,
 name|canvas
@@ -2269,8 +2282,6 @@ argument_list|)
 expr_stmt|;
 name|gdk_draw_line
 argument_list|(
-name|widget
-operator|->
 name|window
 argument_list|,
 name|canvas
@@ -2295,8 +2306,6 @@ argument_list|)
 expr_stmt|;
 name|gdk_draw_line
 argument_list|(
-name|widget
-operator|->
 name|window
 argument_list|,
 name|canvas
@@ -2362,12 +2371,13 @@ condition|)
 return|return;
 name|gdk_draw_point
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|GTK_WIDGET
 argument_list|(
 name|canvas
 argument_list|)
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|canvas
 operator|->
@@ -2421,12 +2431,13 @@ condition|)
 return|return;
 name|gdk_draw_points
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|GTK_WIDGET
 argument_list|(
 name|canvas
 argument_list|)
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|canvas
 operator|->
@@ -2485,12 +2496,13 @@ condition|)
 return|return;
 name|gdk_draw_line
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|GTK_WIDGET
 argument_list|(
 name|canvas
 argument_list|)
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|canvas
 operator|->
@@ -2548,12 +2560,13 @@ condition|)
 return|return;
 name|gdk_draw_lines
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|GTK_WIDGET
 argument_list|(
 name|canvas
 argument_list|)
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|canvas
 operator|->
@@ -2615,12 +2628,13 @@ condition|)
 return|return;
 name|gdk_draw_rectangle
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|GTK_WIDGET
 argument_list|(
 name|canvas
 argument_list|)
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|canvas
 operator|->
@@ -2694,12 +2708,13 @@ condition|)
 return|return;
 name|gdk_draw_arc
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|GTK_WIDGET
 argument_list|(
 name|canvas
 argument_list|)
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|canvas
 operator|->
@@ -2766,12 +2781,13 @@ condition|)
 return|return;
 name|gdk_draw_polygon
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|GTK_WIDGET
 argument_list|(
 name|canvas
 argument_list|)
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|canvas
 operator|->
@@ -2834,12 +2850,13 @@ condition|)
 block|{
 name|gdk_draw_segments
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|GTK_WIDGET
 argument_list|(
 name|canvas
 argument_list|)
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|canvas
 operator|->
@@ -2864,12 +2881,13 @@ expr_stmt|;
 block|}
 name|gdk_draw_segments
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|GTK_WIDGET
 argument_list|(
 name|canvas
 argument_list|)
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|canvas
 operator|->
@@ -2995,12 +3013,13 @@ argument_list|)
 expr_stmt|;
 name|gdk_draw_layout
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|GTK_WIDGET
 argument_list|(
 name|canvas
 argument_list|)
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|canvas
 operator|->
@@ -3076,12 +3095,13 @@ condition|)
 return|return;
 name|gdk_draw_rgb_image_dithalign
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|GTK_WIDGET
 argument_list|(
 name|canvas
 argument_list|)
-operator|->
-name|window
+argument_list|)
 argument_list|,
 name|canvas
 operator|->
@@ -3528,12 +3548,13 @@ index|]
 operator|=
 name|gdk_bitmap_create_from_data
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|GTK_WIDGET
 argument_list|(
 name|canvas
 argument_list|)
-operator|->
-name|window
+argument_list|)
 argument_list|,
 operator|(
 specifier|const
@@ -3684,9 +3705,10 @@ name|colormap
 operator|=
 name|gdk_drawable_get_colormap
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|widget
-operator|->
-name|window
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|g_return_if_fail
@@ -3710,9 +3732,10 @@ argument_list|)
 expr_stmt|;
 name|gdk_window_set_background
 argument_list|(
+name|gtk_widget_get_window
+argument_list|(
 name|widget
-operator|->
-name|window
+argument_list|)
 argument_list|,
 operator|&
 name|gdk_color
